Add back buttons, Nova Musica link, Acesso Mesa with Wake Lock

--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
         <i class="fas fa-users"></i>
         <span>Equipe</span>
       </a>
-      <a href="Cadastro de Musicas.html" class="menu-item">
-        <i class="fas fa-plus-circle" style="color: #e67e22;"></i>
-        <span>Cad. Música</span>
-      </a>
       <a href="Cadastro de Repertorio.html" class="menu-item">
         <i class="fas fa-clipboard-list" style="color: #e67e22;"></i>
         <span>Cad. Repertório</span>
+      </a>
+      <a href="AcessoMesa.html" class="menu-item">
+        <i class="fas fa-sliders-h" style="color: #34495e;"></i>
+        <span>Acesso a Mesa</span>
       </a>
     </div>
 
