--- a/Cadastro de Musicas.html
+++ b/Cadastro de Musicas.html
@@ -119,7 +119,13 @@
 <body>
 
   <div class="card">
-    <h2><i class="fas fa-music"></i> Cadastrar Música</h2>
+    <div style="display:flex; align-items:center; margin-bottom:20px;">
+      <button onclick="window.location.href='index.html'"
+        style="background:none; border:none; font-size:1.5rem; color:var(--primary); cursor:pointer"><i
+          class="fas fa-arrow-left"></i></button>
+      <h2 style="flex-grow:1; text-align:center; transform:translateX(-12px); margin:0;"><i class="fas fa-music"></i>
+        Cadastrar Música</h2>
+    </div>
 
     <form id="musicForm">
       <input type="hidden" name="sheet" value="Musicas">
