--- a/Cadastro de Repertorio.html
+++ b/Cadastro de Repertorio.html
@@ -102,7 +102,13 @@
 <body>
 
   <div class="card">
-    <h2><i class="fas fa-calendar-check"></i> Montar Repertório</h2>
+    <div style="display:flex; align-items:center; margin-bottom:20px;">
+      <button onclick="window.location.href='index.html'"
+        style="background:none; border:none; font-size:1.5rem; color:var(--primary); cursor:pointer"><i
+          class="fas fa-arrow-left"></i></button>
+      <h2 style="flex-grow:1; text-align:center; transform:translateX(-12px); margin:0;"><i
+          class="fas fa-calendar-check"></i> Montar Repertório</h2>
+    </div>
 
     <form id="repertorioForm">
       <input type="hidden" name="sheet" value="Repertório">
@@ -122,6 +128,10 @@
       <div class="field">
         <label>Música - Cantor</label>
         <select id="musicaSelect" name="MusicaFull" placeholder="Pesquisar música..." required></select>
+        <div style="text-align:right; margin-top:5px; font-size:0.85rem">
+          <a href="Cadastro de Musicas.html" style="color:var(--accent); text-decoration:none;"><i
+              class="fas fa-plus"></i> Não encontrou? Adicionar Nova Música</a>
+        </div>
       </div>
 
       <div class="field">
