--- a/Cadastro de Repertorio.html
+++ b/Cadastro de Repertorio.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/css/tom-select.css" rel="stylesheet">
-  <link rel="manifest" href="manifest.json">`n  <script src="config.js"></script>
+  <link rel="manifest" href="manifest.json">
+  <script src="config.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
   <style>
