--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Louvor CEVD</title>
   <link rel="manifest" href="manifest.json">
-  <link rel="icon" type="image/png" href="assets/Leão.png">
-  <link rel="apple-touch-icon" href="assets/Leão.png">
+  <link rel="icon" type="image/png" href="assets/backgroud.png">
+  <link rel="apple-touch-icon" href="assets/backgroud.png">
   <script src="config.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <style>
