--- a/Cadastro de Repertorio.html
+++ b/Cadastro de Repertorio.html
@@ -97,18 +97,45 @@
       color: #721c24;
       border: 1px solid #f5c6cb;
     }
+
+    /* BOTÃO VOLTAR AJUSTADO */
+    .btn-back {
+      background: none !important;
+      border: none !important;
+      padding: 5px !important;
+      width: auto !important;
+      font-size: 1.2rem !important;
+      color: var(--primary) !important;
+      cursor: pointer !important;
+      margin-top: 0 !important;
+      position: absolute;
+      left: 20px;
+    }
+
+    .btn-back:hover {
+      transform: scale(1.1) !important;
+      background: none !important;
+    }
+
+    .header-cad {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 25px;
+      position: relative;
+      min-height: 40px;
+    }
   </style>
 </head>
 
 <body>
 
   <div class="card">
-    <div style="display:flex; align-items:center; margin-bottom:20px;">
-      <button onclick="window.location.href='index.html'"
-        style="background:none; border:none; font-size:1.5rem; color:var(--primary); cursor:pointer"><i
-          class="fas fa-arrow-left"></i></button>
-      <h2 style="flex-grow:1; text-align:center; transform:translateX(-12px); margin:0;"><i
-          class="fas fa-calendar-check"></i> Montar Repertório</h2>
+    <div class="header-cad">
+      <button onclick="window.location.href='index.html'" class="btn-back" title="Voltar">
+        <i class="fas fa-arrow-left"></i>
+      </button>
+      <h2 style="margin:0; font-size:1.1rem;"><i class="fas fa-calendar-check"></i> Montar Repertório</h2>
     </div>
 
     <form id="repertorioForm">
