Correção definitiva do cache em Músicas e Repertório

--- a/Repertorio.html
+++ b/Repertorio.html
@@ -396,7 +396,7 @@
       carregarRepertorio();
     }
 
-    window.onload = carregarRepertorio;
+    window.onload = () => carregarRepertorio();
   </script>
 
 </body>
