--- a/AcessoMesa.html
+++ b/AcessoMesa.html
@@ -7,6 +7,14 @@
     <title>Acesso a Mesa</title>
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="config.js"></script>
+    <script src="permissions.js"></script>
+    <script>
+        const userAcesso = JSON.parse(localStorage.getItem('user_token') || '{}');
+        if (userAcesso.Role && !hasPermission(userAcesso.Role, "AcessoMesa.html", "page")) {
+            window.location.href = 'index.html';
+        }
+    </script>
     <style>
         body,
         html {
