--- a/Musicas.html
+++ b/Musicas.html
@@ -225,13 +225,27 @@
     .hidden {
       display: none !important;
     }
+
+    /* LANDSCAPE OPTIMIZATION */
+    @media (min-width: 800px) {
+      #main-content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        align-items: flex-start;
+      }
+
+      .container {
+        max-width: 1100px;
+      }
+    }
   </style>
 </head>
 
 <body>
 
   <div class="search-outer">
-    <button class="nav-btn" onclick="window.location.href='index.html'"><i class="fas fa-arrow-left"></i></button>
+    <button class="nav-btn" onclick="window.location.href='MenuMusicas.html'"><i class="fas fa-arrow-left"></i></button>
     <input type="text" id="searchInput" placeholder="Pesquisar música ou artista..." onkeyup="filterMusics()">
     <button class="nav-btn" onclick="loadData(true)"><i class="fas fa-sync-alt"></i></button>
   </div>
